# ai-virtual-assistant

./: .gitlab-ci.yml  README.md
src/aiq_agent/aiva_agent/: pyproject.toml
src/aiq_agent/aiva_agent/configs/: config.yml
src/aiq_agent/aiva_agent/src/aiva_agent/: main.py  register.py  state.py  tools.py  utils.py
src/aiq_agent/aiva_agent/src/aiva_agent/cache/: redis_client.py  session_manager.py
src/aiq_agent/aiva_agent/src/aiva_agent/common/: configuration.py  utils.py
src/aiq_agent/aiva_agent/src/aiva_agent/datastore/: datastore.py  postgres_client.py
src/aiq_agent/aiva_agent/src/aiva_agent/functions/: aiva_agent_fn.py  ask_clarification_fn.py  assistant_fn.py  create_session_fn.py  delete_session_fn.py  end_session_fn.py  feedback_response_fn.py  get_product_name_fn.py  get_purchase_history_fn.py  handle_other_talk_fn.py  handle_product_qa_fn.py  health_check_fn.py  is_order_product_valid_fn.py  is_return_product_valid_fn.py  prometheus_metrics_fn.py  return_window_validation_fn.py  route_order_status_fn.py  route_primary_assistant_fn.py  route_return_processing_fn.py  structured_rag_fn.py  to_pydantic_model_fn.py  update_return_fn.py  user_info_fn.py  validate_product_info_fn.py
src/nat_agent/aiva_agent/: pyproject.toml
src/nat_agent/aiva_agent/configs/: config.yml
src/nat_agent/aiva_agent/src/aiva_agent/: main.py  register.py  server.py  tools.py  utils.py
src/nat_agent/aiva_agent/src/aiva_agent/cache/: redis_client.py  session_manager.py
src/nat_agent/aiva_agent/src/aiva_agent/datastore/: datastore.py  postgres_client.py
src/nat_agent/aiva_agent/src/aiva_agent/functions/: aiva_agent_fn.py  ask_clarification_fn.py  assistant_fn.py  canonical_rag_fn.py  create_session_fn.py  delete_session_fn.py  end_session_fn.py  (+18 more)
(+35 files in other folders)
