[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[tool.setuptools_scm]
root = "../aiqtoolkit"

[project]
name = "aiva_agent"
version = "0.1.0"
dependencies = [
  "aiqtoolkit[langchain]",
  "aiqtoolkit[telemetry]",
  "psycopg_pool",
  "psycopg",
  "psycopg2-binary",
  "psycopg[binary]",
  "SQLAlchemy",
  "langgraph-checkpoint-postgres",
  "dataclass-wizard",
  "redis",
  "prometheus_client",
  "bleach",
  "nest-asyncio",
  "elasticsearch==8.17.2",
]
requires-python = ">=3.11,<3.13"
description = "Custom AIQ Toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../aiqtoolkit", editable = true }

[project.entry-points.'aiq.components']
aiva_agent = "aiva_agent.register"